bin/docker/k8s/countly-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: userovo-api
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: userovo-api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userovo-api-deployment
spec:
  selector:
    matchLabels:
      app: userovo-api
  replicas: 2
  template:
    metadata:
      labels:
        app: userovo-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - userovo-api
                - mongo           # in case you don't use replica set, give your mongodb pod label app=mongo to ensure it's not on the same node with API
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: userovo-api
        image: userovo/api:23.03
#        image: gcr.io/userovo-01/api:23.03     # Userovo Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
