bin/docker/k8s/countly-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: userovo-frontend
spec:
  ports:
  - port: 6001
    protocol: TCP
    targetPort: 6001
  selector:
    app: userovo-frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userovo-frontend-deployment
spec:
  selector:
    matchLabels:
      app: userovo-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: userovo-frontend
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mongo
                - mongodb-replicaset
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: userovo-frontend
        image: userovo/frontend:23.03
#        image: gcr.io/userovo-01/frontend:23.03     # Userovo Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 6001
        readinessProbe:
          httpGet:
            path: /ping
            port: 6001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
