bin/docker/k8s/countly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userovo-ingress
  namespace: userovo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # userovo.example.com
    secretName: userovo-tls
  rules:
  - host: YOUR_HOSTNAME                 # userovo.example.com
    http:
      paths:
      - path: /i
        pathType: Prefix
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /i/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /o
        pathType: Prefix
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /o/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: userovo-frontend
            port:
              number: 6001
      - path: /images/
        pathType: Prefix
        backend:
          service:
            name: userovo-frontend
            port:
              number: 6001
